--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>ri (date) tests</title>
+  <title>Activity Graph Tests</title>
   <link rel="stylesheet" href="resources/qunit.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
   <div id="qunit-fixture"></div>
   <script src="resources/jquery-1.10.2.min.js"></script>
   <script src="resources/qunit.js"></script>
-  <script src="lib/stopwatch.js" data-cover></script>
+  <script src="lib/ri.js" data-cover></script>
   <script src="test/tests.js"></script>
   <script src="resources/blanket.js"></script>
 </body>
