name change to date-utils > du.js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="qunit-fixture"></div>
   <script src="resources/jquery-1.10.2.min.js"></script>
   <script src="resources/qunit.js"></script>
-  <script src="lib/ri.js" data-cover></script>
+  <script src="lib/du.js" data-cover></script>
   <script src="test/tests.js"></script>
   <script src="resources/blanket.js"></script>
 </body>
