--- a/try.html
+++ b/try.html
@@ -5,7 +5,7 @@
   <title>Activity Graph Tests</title>
 </head>
 <body>
-  <script src="lib/ri.js" data-cover></script>
+  <script src="lib/du.js" data-cover></script>
   <script type="text/javascript">
     var expect, input, DD, MM, YYYY;
     // console.dir(DU);
