--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Activity Graph Tests</title>
-  <link rel="stylesheet" href="resources/qunit.css">
+  <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.14.0.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="resources/jquery-1.10.2.min.js"></script>
-  <script src="resources/qunit.js"></script>
+  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="http://code.jquery.com/qunit/qunit-1.14.0.js"></script>
   <script src="du.js" data-cover></script>
   <script src="test/tests.js"></script>
-  <script src="resources/blanket.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/blanket.js/1.1.4/blanket.min.js"></script>
 </body>
 </html>
