--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="http://code.jquery.com/qunit/qunit-1.14.0.js"></script>
   <script src="du.js" data-cover></script>
-  <script src="test/tests.js"></script>
+  <script src="test.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/blanket.js/1.1.4/blanket.min.js"></script>
 </body>
 </html>
